# LearningRust

chat-bot/: Cargo.toml
chat-bot/src/: main.rs
my-webserver/: Cargo.toml  url.db
my-webserver/migrations/2023-11-28-222446_create_url/: down.sql  up.sql
my-webserver/src/: db.rs  main.rs
my-webserver/src/db/: schema.rs
my-webserver/src/routes/: date.rs
my-webserver/src/services/: date.rs
ownGrep/: grep.rs
toDo/: Cargo.toml
toDo/src/: main.rs
toDo/src/db/: to_do_list.db
