[package]
name = "chat-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12", features = ["blocking", "json","multipart"]}
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest-oauth1 = "*"