[package]
name = "toDo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
dialoguer = "0.11.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
clap = {version= "4.2", features=["derive"]}